--- a/view/frontend/web/template/minicart/content.html
+++ b/view/frontend/web/template/minicart/content.html
@@ -57,7 +57,7 @@
                             attr: {
                                 title: $t('Proceed to Checkout')
                             },
-                            click: openPopup() 
+                            click: openPopup 
                         "
                         translate="'Proceed to Checkout'">
                 </button>
