working on the backend configuration

--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
-
     <body>
 		<referenceContainer name="after.body.start">
-			<block class="Magento\Framework\View\Element\Template" cacheable="false" name="customcomponents" as="customcomponents" template="NoFraud_Checkout::js/customcomponents.phtml"/>
-		</referenceContainer>
-		<referenceContainer name="before.body.end">
-			<block class="Magento\Framework\View\Element\Template" cacheable="false" name="customcomponents.end" as="customcomponentsend" template="NoFraud_Checkout::js/customcomponents-end.phtml"/>
+			<block class="Magento\Framework\View\Element\Template" cacheable="false" name="customcomponents" as="customcomponents" template="NoFraud_Checkout::js/customcomponents.phtml" ifconfig="nofraud/general/enabled" />
 		</referenceContainer>
 	</body>
 </page>
