--- a/view/adminhtml/templates/order/view/nofraudpamynet-info.phtml
+++ b/view/adminhtml/templates/order/view/nofraudpamynet-info.phtml
@@ -4,11 +4,13 @@
             <br/>
             <?php
                 $paymentData = json_decode($_order->getNofraudcheckout(),true);
-                foreach ($paymentData as $key => $payment){ ?>
-                    <strong><?= __(ucwords($key)); ?>:</strong>
-                    <span><?= __(ucwords($paymentData[$key])); ?></span>
-                    <br/>
-            <?php }
+                if ($paymentData) {
+                    foreach ($paymentData as $key => $payment){ ?>
+                        <strong><?= __(ucwords($key)); ?>:</strong>
+                        <span><?= __(ucwords($paymentData[$key])); ?></span>
+                        <br/>
+            <?php   }
+                }
             ?>
         </div>
     <?php } ?>
